完成多方塊socket加入邏輯
Work02實現了當使用者進入時會產生一個位置、旋轉量、大小、顏色隨機的方塊

在退出時會正常清除客戶端名單與該名單的代表模型

有人中途加入時會判斷該客戶端是否已經存在該物件。
若沒有: 按照該資料加入模型。
若有: 更新該物件的位置與座標、

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
+    "nodemon": "^3.1.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
@@ -31,7 +32,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ./work02/index.html",
-    "build": "parcel build ./work02/index.html"
+    "build": "parcel build ./work02/index.html",
+    "server": "nodemon ./work02/server/server.mjs"
   },
   "keywords": [],
   "author": "",
